@@ -1,3 +1,8 @@
+2004-05-02  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libjpeg/jpeg-marker.h: No implicit enum declaration. Seen by
+	  Antonio Scuri <scuri@tecgraf.puc-rio.br>.
+
 2004-04-04  Lutz Mueller lutz@users.sourceforge.net
 
 	* libexif/exif-data.c: If we don't know a tag we are going to parse,
